# rlstocks

./: dataset_generator.py  main.py  main_nn.py  pyproject.toml  trading_environment.py
data/: BTCUSD_midnight.csv  gemini_ETHUSD_1hr.csv  gemini_LTCUSD_1hr.csv  gemini_ZECUSD_1hr.csv
