[tool.poetry]
name = "rlstocks"
version = "0.1.0"
description = ""
authors = ["Riley Sutton"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
keras = "^2.6.0"
tensorflow = "^2.6.0"
dm-acme = {extras = ["jax"], version = "^0.2.2"}
pandas = "^1.3.3"
matplotlib = "^3.4.3"
gym = "^0.20.0"
stable-baselines3 = "^1.2.0"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
