[tool.poetry]
name = "rlstocks"
version = "0.1.0"
description = ""
authors = ["Riley Sutton"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
gym = "^0.20.0"
stable-baselines3 = "^1.2.0"
pyglet = "^1.5.21"
dm-acme = {extras = ["tensorflow"], version = "^0.2.2"}
keras = "^2.6.0"
tensorflow = "^2.6.0"
scikit-learn = "^1.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
